orcutils: refactor /proc/cpuinfo reading code from orccpu-arm.c

This code will later be used by mips target, so it makes sense
to use a common function instead of duplicating the code.

https://bugzilla.gnome.org/show_bug.cgi?id=760834